data transfer modifier error #62528

Closed
opened 2019-03-13 07:42:07 +01:00 by Massimiliano Puliero · 7 comments

System Information
Operating system: win7 64
Graphics card: gtx 1070

Blender Version
Broken: git.bf9904ec8018
Worked: 2.79

Short description of error
using the "Data transfer" modifier to transfer the "Custom Normals" doesn't work.

Exact steps for others to reproduce the error
please open the file "transf_280.blend" to see the error.
I also attached "transf_279.blend" made in blender 2.79 to see how the final result supposed to be.

Thank you

transf_280.blend

transf_279.blend

**System Information** Operating system: win7 64 Graphics card: gtx 1070 **Blender Version** Broken: git.bf9904ec8018 Worked: 2.79 **Short description of error** using the "Data transfer" modifier to transfer the "Custom Normals" doesn't work. **Exact steps for others to reproduce the error** please open the file "transf_280.blend" to see the error. I also attached "transf_279.blend" made in blender 2.79 to see how the final result supposed to be. Thank you [transf_280.blend](https://archive.blender.org/developer/F6813407/transf_280.blend) [transf_279.blend](https://archive.blender.org/developer/F6813408/transf_279.blend)

Added subscriber: @MassimilianoPuliero

Added subscriber: @MassimilianoPuliero

Added subscriber: @Gooney

Added subscriber: @Gooney

I have also found that the vertex groups and weighting do not transfer at all as of bf9904ec8018-win64, was fine in 2.79.

I have also found that the vertex groups and weighting do not transfer at all as of bf9904ec8018-win64, was fine in 2.79.

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2019-03-13 14:57:29 +01:00

Yeah, something is wrong here indeed… Weird, I could have swear that that was working last week or so :[

Yeah, something is wrong here indeed… Weird, I could have swear that that was working last week or so :[

This issue was referenced by bcc66136c2

This issue was referenced by bcc66136c2745b9d047fc5540c7b6b247855955f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62528
No description provided.